; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/hyperv/tools/extr_hv_vss_daemon.c_thaw.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/hyperv/tools/extr_hv_vss_daemon.c_thaw.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@g_ufs_suspend_handle = common dso_local global i32 0, align 4
@LOG_INFO = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [26 x i8] c"Successfully thaw the fs\0A\00", align 1
@errno = common dso_local global i32 0, align 4
@LOG_ERR = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [28 x i8] c"Fail to thaw the fs: %d %s\0A\00", align 1
@.str.2 = private unnamed_addr constant [32 x i8] c"The fs has already been thawed\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 ()* @thaw to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @thaw() #0 {
  %1 = alloca i32, align 4
  store i32 0, i32* %1, align 4
  %2 = load i32, i32* @g_ufs_suspend_handle, align 4
  %3 = icmp ne i32 %2, -1
  br i1 %3, label %4, label %20

4:                                                ; preds = %0
  %5 = load i32, i32* @g_ufs_suspend_handle, align 4
  %6 = call i32 @close(i32 %5)
  store i32 %6, i32* %1, align 4
  %7 = load i32, i32* %1, align 4
  %8 = icmp ne i32 %7, 0
  br i1 %8, label %12, label %9

9:                                                ; preds = %4
  store i32 -1, i32* @g_ufs_suspend_handle, align 4
  %10 = load i32, i32* @LOG_INFO, align 4
  %11 = call i32 (i32, i8*, ...) @VSS_LOG(i32 %10, i8* getelementptr inbounds ([26 x i8], [26 x i8]* @.str, i64 0, i64 0))
  br label %19

12:                                               ; preds = %4
  %13 = load i32, i32* @errno, align 4
  store i32 %13, i32* %1, align 4
  %14 = load i32, i32* @LOG_ERR, align 4
  %15 = load i32, i32* @errno, align 4
  %16 = load i32, i32* @errno, align 4
  %17 = call i32 @strerror(i32 %16)
  %18 = call i32 (i32, i8*, ...) @VSS_LOG(i32 %14, i8* getelementptr inbounds ([28 x i8], [28 x i8]* @.str.1, i64 0, i64 0), i32 %15, i32 %17)
  br label %19

19:                                               ; preds = %12, %9
  br label %23

20:                                               ; preds = %0
  %21 = load i32, i32* @LOG_INFO, align 4
  %22 = call i32 (i32, i8*, ...) @VSS_LOG(i32 %21, i8* getelementptr inbounds ([32 x i8], [32 x i8]* @.str.2, i64 0, i64 0))
  br label %23

23:                                               ; preds = %20, %19
  %24 = load i32, i32* %1, align 4
  ret i32 %24
}

declare dso_local i32 @close(i32) #1

declare dso_local i32 @VSS_LOG(i32, i8*, ...) #1

declare dso_local i32 @strerror(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
